fixed html error and couple minor spacing

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -181,6 +181,8 @@ footer {
 .disclaimer {
   font-size: 1rem;
   color: var(--grayish-blue);
+  margin-top: 1.5rem;
+  text-align: center;
 }
 .hide {
   display: none;
