--- a/src/sass/_form.scss
+++ b/src/sass/_form.scss
@@ -41,7 +41,7 @@
     font-size: 1.2rem;
     font-weight: 500;
     margin-left: 2rem;
-    margin-top: 0.7rem;
+    margin-top: 0.2rem;
     display: block;
     transition: all 0.3s;
   }
